--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "Mongoose",
         "Cors"
     ],
-    "author": "Cristian Farriol",
+    "author": "Mauro Quintana",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.19.2",
-        "cloudinary": "^2.0.1",
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
@@ -27,7 +28,9 @@
         "mongoose": "^6.2.4",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
-        "nodemailer": "^6.7.7"
+        "newsapi": "^2.4.1",
+        "nodemailer": "^6.7.7",
+        "uuid": "^10.0.0"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
